Committing local changes to index.js

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ API_KEY="938125594617771"
 API_SECRET="LD4de_g3RENCEYF5eDidc_0dYsQ"
 
 FRONTEND_PORT="http://localhost:3000"
+
+DB_URL="postgres://postgres_wlvq_user:7lBFBqobVue4OsM4X3k8oPqD5dttKIHz@dpg-cnr5amuct0pc73cqdgr0-a.oregon-postgres.render.com/postgres_wlvq"
