--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-CLOUDINARY_URL=cloudinary://938125594617771:LD4de_g3RENCEYF5eDidc_0dYsQ@dok2rl0zm
+CLOUDINARY_URL=
 
-CLOUD_NAME="dok2rl0zm"
+CLOUD_NAME=""
 
-API_KEY="938125594617771"
+API_KEY=""
 
-API_SECRET="LD4de_g3RENCEYF5eDidc_0dYsQ"
+API_SECRET=""
 
 FRONTEND_PORT="http://localhost:3000"
 
-DB_URL="postgres://postgres_wlvq_user:7lBFBqobVue4OsM4X3k8oPqD5dttKIHz@dpg-cnr5amuct0pc73cqdgr0-a.oregon-postgres.render.com/postgres_wlvq"
+DB_URL=""
