--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ API_SECRET="LD4de_g3RENCEYF5eDidc_0dYsQ"
 FRONTEND_PORT="http://localhost:3000"
 
 DB_URL="postgres://postgres_wlvq_user:7lBFBqobVue4OsM4X3k8oPqD5dttKIHz@dpg-cnr5amuct0pc73cqdgr0-a.oregon-postgres.render.com/postgres_wlvq"
+
+EMAIL="gokulgokul10204@gmail.com"
+
+PASSWORD="fgnuprsobcneseup"
